Optionally turn off key acceleration on layout movement

--- a/xLights/wxsmith/ViewSettingsPanel.wxs
+++ b/xLights/wxsmith/ViewSettingsPanel.wxs
@@ -110,6 +110,16 @@
 				<option>1</option>
 			</object>
 			<object class="sizeritem">
+				<object class="wxCheckBox" name="ID_CHECKBOX5" variable="CheckBox_DisableKeyAcceleration" member="yes">
+					<label>Disable key acceleration when held down</label>
+				</object>
+				<col>0</col>
+				<row>9</row>
+				<flag>wxALL|wxEXPAND</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
 				<object class="wxCheckBox" name="ID_CHECKBOX3" variable="CheckBox_BaseShowFolder" member="yes">
 					<label>Enable Base Show Folder Settings</label>
 					<handler function="OnCheckBox_BaseShowFolderClick" entry="EVT_CHECKBOX" />
