--- a/xLights/wxsmith/xLightsImportChannelMapDialog.wxs
+++ b/xLights/wxsmith/xLightsImportChannelMapDialog.wxs
@@ -293,7 +293,7 @@
 							<object class="sizeritem">
 								<object class="wxListCtrl" name="ID_LISTCTRL1" variable="ListCtrl_Available" member="yes">
 									<size>100,-1d</size>
-									<style>wxLC_REPORT|wxLC_SINGLE_SEL|wxVSCROLL</style>
+									<style>wxLC_REPORT|wxVSCROLL</style>
 									<handler function="OnListCtrl_AvailableBeginDrag" entry="EVT_LIST_BEGIN_DRAG" />
 									<handler function="OnListCtrl_AvailableItemSelect" entry="EVT_LIST_ITEM_SELECTED" />
 									<handler function="OnListCtrl_AvailableItemActivated" entry="EVT_LIST_ITEM_ACTIVATED" />
