--- a/xLights/wxsmith/SeqSettingsDialog.wxs
+++ b/xLights/wxsmith/SeqSettingsDialog.wxs
@@ -189,22 +189,22 @@
 											<option>1</option>
 										</object>
 										<object class="sizeritem">
-											<object class="wxTextCtrl" name="ID_TEXTCTRL2" variable="TextCtrl_Premiliseconds" member="yes">
+											<object class="wxTextCtrl" name="ID_TEXTCTRL2" variable="TextCtrl_Premilliseconds" member="yes">
 												<value>0</value>
 												<maxlength>5</maxlength>
 												<size>50,25</size>
-												<tooltip>Miliseconds to add to the begining of the sequence</tooltip>
+												<tooltip>Milliseconds to add to the begining of the sequence</tooltip>
 											</object>
 											<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 											<border>5</border>
 											<option>1</option>
 										</object>
 										<object class="sizeritem">
-											<object class="wxTextCtrl" name="ID_TEXTCTRL3" variable="TextCtrl_Postmiliseconds" member="yes">
+											<object class="wxTextCtrl" name="ID_TEXTCTRL3" variable="TextCtrl_Postmilliseconds" member="yes">
 												<value>0</value>
 												<maxlength>5</maxlength>
 												<size>50,25</size>
-												<tooltip>Miliseconds to add to the ending of the sequence</tooltip>
+												<tooltip>Milliseconds to add to the ending of the sequence</tooltip>
 											</object>
 											<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 											<border>5</border>
@@ -233,10 +233,10 @@
 											<object class="wxFlexGridSizer" variable="FlexGridSizer16" member="no">
 												<cols>3</cols>
 												<object class="sizeritem">
-													<object class="wxButton" name="ID_BUTTON_AddMiliseconds" variable="Button_AddMiliseconds" member="yes">
-														<label>Add Miliseconds</label>
+													<object class="wxButton" name="ID_BUTTON_AddMilliseconds" variable="Button_AddMilliseconds" member="yes">
+														<label>Add Milliseconds</label>
 														<size>143,23</size>
-														<handler function="OnButton_AddMilisecondsClick" entry="EVT_BUTTON" />
+														<handler function="OnButton_AddMillisecondsClick" entry="EVT_BUTTON" />
 													</object>
 													<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 													<border>5</border>
