--- a/xLights/wxsmith/EffectsGridSettingsPanel.wxs
+++ b/xLights/wxsmith/EffectsGridSettingsPanel.wxs
@@ -2,13 +2,12 @@
 <wxsmith>
 	<object class="wxPanel" name="EffectsGridSettingsPanel">
 		<id_arg>0</id_arg>
-		<object class="wxGridBagSizer" variable="GridBagSizer1" member="no">
+		<object class="wxGridSizer" variable="GridSizer1" member="no">
+			<cols>2</cols>
 			<object class="sizeritem">
 				<object class="wxStaticText" name="wxID_ANY" variable="StaticText5" member="no">
 					<label>Spacing</label>
 				</object>
-				<col>0</col>
-				<row>0</row>
 				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
 				<border>5</border>
 				<option>1</option>
@@ -25,8 +24,6 @@
 					<selection>2</selection>
 					<handler function="OnGridSpacingChoiceSelect" entry="EVT_CHOICE" />
 				</object>
-				<col>1</col>
-				<row>0</row>
 				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 				<border>5</border>
 				<option>1</option>
@@ -36,10 +33,12 @@
 					<label>Icon Backgrounds</label>
 					<handler function="OnIconBackgroundsCheckBoxClick" entry="EVT_CHECKBOX" />
 				</object>
-				<colspan>2</colspan>
-				<col>0</col>
-				<row>1</row>
 				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="spacer">
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 				<border>5</border>
 				<option>1</option>
 			</object>
@@ -48,10 +47,27 @@
 					<label>Node Values</label>
 					<handler function="OnNodeValuesCheckBoxClick" entry="EVT_CHECKBOX" />
 				</object>
-				<colspan>2</colspan>
-				<col>0</col>
-				<row>2</row>
 				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="spacer">
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxCheckBox" name="ID_CHECKBOX7" variable="GroupEffectIndicator" member="yes">
+					<label>Group Effect Indicator</label>
+					<checked>1</checked>
+					<handler function="OnGroupEffectIndicatorClick" entry="EVT_CHECKBOX" />
+				</object>
+				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="spacer">
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 				<border>5</border>
 				<option>1</option>
 			</object>
@@ -60,10 +76,12 @@
 					<label>Snap to Timing Marks</label>
 					<handler function="OnSnapToTimingCheckBoxClick" entry="EVT_CHECKBOX" />
 				</object>
-				<colspan>2</colspan>
-				<col>0</col>
-				<row>3</row>
 				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="spacer">
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 				<border>5</border>
 				<option>1</option>
 			</object>
@@ -71,44 +89,6 @@
 				<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText1" member="yes">
 					<label>Double Click Mode</label>
 				</object>
-				<col>0</col>
-				<row>4</row>
-				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
-				<border>5</border>
-				<option>1</option>
-			</object>
-			<object class="sizeritem">
-				<object class="wxCheckBox" name="ID_CHECKBOX4" variable="SmallWaveformCheckBox" member="yes">
-					<label>Small Waveform</label>
-					<handler function="OnSmallWaveformCheckBoxClick" entry="EVT_CHECKBOX" />
-				</object>
-				<colspan>2</colspan>
-				<col>0</col>
-				<row>5</row>
-				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
-				<border>5</border>
-				<option>1</option>
-			</object>
-			<object class="sizeritem">
-				<object class="wxCheckBox" name="ID_CHECKBOX6" variable="TransistionMarksCheckBox" member="yes">
-					<label>Display Transition Marks</label>
-					<checked>1</checked>
-					<handler function="OnTransistionMarksCheckBoxClick" entry="EVT_CHECKBOX" />
-				</object>
-				<colspan>2</colspan>
-				<col>0</col>
-				<row>6</row>
-				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
-				<border>5</border>
-				<option>1</option>
-			</object>
-			<object class="sizeritem">
-				<object class="wxCheckBox" name="ID_CHECKBOX5" variable="ColorUpdateWarnCheckBox" member="yes">
-					<label>Hide Color Update Warning</label>
-					<handler function="OnColorUpdateWarnCheckBoxClick" entry="EVT_CHECKBOX" />
-				</object>
-				<col>0</col>
-				<row>7</row>
 				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
 				<border>5</border>
 				<option>1</option>
@@ -122,9 +102,45 @@
 					<selection>1</selection>
 					<handler function="OnDoubleClickChoiceSelect" entry="EVT_CHOICE" />
 				</object>
-				<col>1</col>
-				<row>4</row>
 				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxCheckBox" name="ID_CHECKBOX4" variable="SmallWaveformCheckBox" member="yes">
+					<label>Small Waveform</label>
+					<handler function="OnSmallWaveformCheckBoxClick" entry="EVT_CHECKBOX" />
+				</object>
+				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="spacer">
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxCheckBox" name="ID_CHECKBOX6" variable="TransistionMarksCheckBox" member="yes">
+					<label>Display Transition Marks</label>
+					<checked>1</checked>
+					<handler function="OnTransistionMarksCheckBoxClick" entry="EVT_CHECKBOX" />
+				</object>
+				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="spacer">
+				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxCheckBox" name="ID_CHECKBOX5" variable="ColorUpdateWarnCheckBox" member="yes">
+					<label>Hide Color Update Warning</label>
+					<handler function="OnColorUpdateWarnCheckBoxClick" entry="EVT_CHECKBOX" />
+				</object>
+				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
 				<border>5</border>
 				<option>1</option>
 			</object>
