--- a/xLights/wxsmith/SubModelsDialog.wxs
+++ b/xLights/wxsmith/SubModelsDialog.wxs
@@ -137,8 +137,8 @@
 					</object>
 					<object class="sizeritem">
 						<object class="wxSplitterWindow" name="ID_SPLITTERWINDOW1" variable="SplitterWindow1" member="yes">
-							<minsize>100</minsize>
 							<orientation>vertical</orientation>
+							<minsize>100,100</minsize>
 							<style>wxSP_3D|wxSP_LIVE_UPDATE</style>
 							<handler function="OnSplitterSashPosChanging" entry="EVT_SPLITTER_SASH_POS_CHANGING" />
 							<object class="wxPanel" name="ID_PANEL5" variable="Panel3" member="yes">
@@ -222,12 +222,13 @@
 																</object>
 																<object class="sizeritem">
 																	<object class="wxGrid" name="ID_GRID1" variable="NodesGrid" member="yes">
-																		<cols>1</cols>
+																		<cols>2</cols>
 																		<rows>5</rows>
 																		<labelrowheight>18</labelrowheight>
 																		<defaultcolsize>160</defaultcolsize>
 																		<collabels>
 																			<item>Node Ranges</item>
+																			<item>Node Count</item>
 																		</collabels>
 																		<rowlabels>
 																			<item>Strand   1</item>
