Edit submodel Aliases Up Arrow bug

--- a/xLights/wxsmith/EditSubmodelAliasesDialog.wxs
+++ b/xLights/wxsmith/EditSubmodelAliasesDialog.wxs
@@ -24,6 +24,7 @@
 					<object class="sizeritem">
 						<object class="wxBitmapButton" name="ID_BITMAPBUTTONUP" variable="ButtonMoveUp" member="yes">
 							<bitmap code='wxArtProvider::GetBitmapBundle(&quot;wxART_GO_UP&quot;, wxART_TOOLBAR)' />
+							<handler function="OnButtonMoveUpClick" entry="EVT_BUTTON" />
 						</object>
 						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 						<border>5</border>
