--- a/xLights/wxsmith/FanPanel.wxs
+++ b/xLights/wxsmith/FanPanel.wxs
@@ -696,6 +696,7 @@
 										<object class="sizeritem">
 											<object class="wxCheckBox" name="ID_CHECKBOX_Fan_Scale" subclass="BulkEditCheckBox" variable="CheckBox_Fan_Scale" member="yes">
 												<label>Scale to Buffer:</label>
+												<checked>1</checked>
 												<style>wxALIGN_RIGHT</style>
 											</object>
 											<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
