--- a/xLights/wxsmith/ShockwavePanel.wxs
+++ b/xLights/wxsmith/ShockwavePanel.wxs
@@ -423,6 +423,7 @@
 								<object class="sizeritem">
 									<object class="wxCheckBox" name="ID_CHECKBOX_Shockwave_Scale" subclass="BulkEditCheckBox" variable="CheckBox_Shockwave_Scale" member="yes">
 										<label>Scale to Buffer:</label>
+										<checked>1</checked>
 										<style>wxALIGN_RIGHT</style>
 									</object>
 									<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
