--- a/xLights/wxsmith/SubModelsDialog.wxs
+++ b/xLights/wxsmith/SubModelsDialog.wxs
@@ -222,12 +222,13 @@
 																</object>
 																<object class="sizeritem">
 																	<object class="wxGrid" name="ID_GRID1" variable="NodesGrid" member="yes">
-																		<cols>1</cols>
+																		<cols>2</cols>
 																		<rows>5</rows>
 																		<labelrowheight>18</labelrowheight>
 																		<defaultcolsize>160</defaultcolsize>
 																		<collabels>
 																			<item>Node Ranges</item>
+																			<item>Node Count</item>
 																		</collabels>
 																		<rowlabels>
 																			<item>Strand   1</item>
