--- a/xLights/wxsmith/OtherSettingsPanel.wxs
+++ b/xLights/wxsmith/OtherSettingsPanel.wxs
@@ -304,7 +304,7 @@
 					<cols>2</cols>
 					<object class="sizeritem">
 						<object class="wxStaticText" name="ID_STATICTEXT6" variable="StaticText7" member="yes">
-							<label>Model reanaming alias behavior:</label>
+							<label>Model renaming alias behavior:</label>
 						</object>
 						<flag>wxALL|wxEXPAND</flag>
 						<border>5</border>
@@ -370,6 +370,35 @@
 				<row>2</row>
 				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
 				<border>5</border>
+				<option>1</option>
+			</object>
+			<object class="sizeritem">
+				<object class="wxFlexGridSizer" variable="FlexGridSizer8" member="no">
+					<cols>2</cols>
+					<growablecols>1</growablecols>
+					<object class="sizeritem">
+						<object class="wxStaticText" name="ID_STATICTEXT7" variable="StaticText8" member="yes">
+							<label>Controller ping interval in seconds (0=Off):</label>
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxSpinCtrlDouble" name="ID_CTRLPINGINTERVAL" variable="CtrlPingInterval" member="yes">
+							<value>0</value>
+							<max>300.000000</max>
+							<increment>10.000000</increment>
+							<handler function="OnSpinCtrlDoubleBitrateChange" entry="EVT_SPINCTRLDOUBLE" />
+						</object>
+						<flag>wxALL|wxEXPAND</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+				</object>
+				<col>0</col>
+				<row>10</row>
+				<flag>wxALL</flag>
 				<option>1</option>
 			</object>
 		</object>
