--- a/xLights/wxsmith/RenderProgressDialog.wxs
+++ b/xLights/wxsmith/RenderProgressDialog.wxs
@@ -3,7 +3,7 @@
 	<object class="wxDialog" name="RenderProgressDialog">
 		<title>Rendering Progress</title>
 		<id_arg>0</id_arg>
-		<style>wxDEFAULT_DIALOG_STYLE|wxRESIZE_BORDER</style>
+		<style>wxDEFAULT_DIALOG_STYLE|wxRESIZE_BORDER|wxMAXIMIZE_BOX</style>
 		<object class="wxFlexGridSizer" variable="FlexGridSizer1" member="no">
 			<cols>1</cols>
 			<rows>2</rows>
