Fix alternative time display on Linux/Mac

--- a/xLights/wxsmith/EffectsGridSettingsPanel.wxs
+++ b/xLights/wxsmith/EffectsGridSettingsPanel.wxs
@@ -202,6 +202,7 @@
 				<object class="wxCheckBox" name="ID_CHECKBOX8" variable="ShowAlternateTimingFormatCheckBox" member="yes">
 					<label>Show Alternate Timing Format</label>
 					<tooltip>Sequencer timing will be displayed in seconds and milliseconds</tooltip>
+					<handler function="OnShowAlternateTimingFormatCheckBoxClick" entry="EVT_CHECKBOX" />
 				</object>
 				<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
 				<border>5</border>
